# dotfile-manager

./: .gitignore  README.md  dotfile-config.yml  file-dotfile.py  install.py  pyproject.toml
src/dotfile_manager/: __init__.py  add.py  cli.py  install.py
